# the-ray-tracer-challenge

./: .gitignore  Cargo.toml  README.md  clock.ppm  improvements.md  projectile.ppm
src/: approx_eq.rs  color.rs  main.rs  projectile.rs
src/drawings/: camera.rs  clock.rs  mod.rs  plane.rs  projectile.rs  ray_sphere.rs  ray_sphere_3d.rs  reflection_refraction.rs
src/drawings/ppms/: ray_sphere.ppm
src/float/: approx_eq.rs  epsilon.rs  mod.rs
src/float/tests/: mod.rs  tests_float.rs
src/primitive/: mod.rs  point.rs  point2d.rs  tuple.rs  vector.rs
src/primitive/tests/: mod.rs  tests_point.rs  tests_vector.rs
src/rt/: camera.rs  canvas.rs  color.rs  computation.rs  intersect.rs  intersection.rs  intersections.rs  lighting.rs  material.rs  matrix.rs  mod.rs  normal.rs  object.rs  pattern.rs  patterns.rs  plane.rs  point_light.rs  ppm.rs  ray.rs  shape.rs  sphere.rs  to_ppm.rs  transform.rs  world.rs
src/rt/tests/: mod.rs  tests_camera.rs  tests_canvas.rs  tests_color.rs  tests_intersection.rs  tests_light.rs  tests_lights.rs  tests_material.rs  tests_matrix.rs  tests_patterns.rs  tests_plane.rs  tests_ray.rs  tests_sphere.rs  tests_world.rs
src/tuple/: mod.rs  point.rs  vector.rs
src/tuple/tests/: tests_point.rs  tests_vector.rs
