[package]
name = "the-ray-tracer-challenge"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Link time optimization using using whole-program analysis => 
# NOTE - Not used when codegen-units is set to 1, though lto in combination with codegen-units > 1 seems to produce much slower code than when codegen-units is set to 1.
# lto = true
